# rustle-client

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
