[package]
name = "frontend"
version = "0.1.0"
description = "Frontend for the Rustle Search Engine"
authors = ["rip_super"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-stemmers = "1.2.0"

[profile.dev]
opt-level = 3
debug = true
